[tool.poetry]
name = "auto-video"
version = "0.1.0"
description = ""
authors = ["Jigsaw <j1g5aw@foxmail.com>"]
readme = "README.md"
packages = [{include = "auto_video"}]

[tool.poetry.dependencies]
python = "^3.10"
baidu-aip = "^4.16.6"
chardet = "^5.0.0"
eyed3 = "^0.9.6"
Pillow = "^9.2.0"
opencv-python = "^4.6.0.66"
moviepy = "^1.0.3"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
